api linki inputlara göre oluşturuldu ve istek atıldı.

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,8 @@ label{
   -webkit-user-select: none;
   touch-action: manipulation;
   will-change: transform;
+  margin-top: 50px;
+  margin-left: 35%;
 }
 
 .calcAqi:disabled {
